# YC-Killer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
Agentic-Accounting-Firm/: README.md
Agentic-Call-Centre/: README.md
Agentic-Deep-Research/: README.md  package-lock.json  package.json
Agentic-Hospital/: README.md  package-lock.json  package.json
Agentic-Professor/: README.md
Agentic-Quant-Hedge-Fund/: CONTRIBUTING.md  LICENSE  (+3 more)
Agentic_Physics_Research_Lab/grantlab/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
Agentic_Physics_Research_Lab/grantlab/examples/physics/: oscillator.yml
Agentic_Physics_Research_Lab/grantlab/examples/simple_experiment/: config.yml  dataset.csv
Agentic_Physics_Research_Lab/grantlab/grantlab/: __init__.py  cli.py  config.py  pipeline.py
Agentic_Physics_Research_Lab/grantlab/grantlab/analysis/: interpreter.py
Agentic_Physics_Research_Lab/grantlab/grantlab/design/: experiment_designer.py
Agentic_Physics_Research_Lab/grantlab/grantlab/hypothesis/: generator.py
Agentic_Physics_Research_Lab/grantlab/grantlab/lean_agent/: lean_agent.py  translator.py
Agentic_Physics_Research_Lab/grantlab/grantlab/lean_agent/templates/: HypothesisProof.lean.j2
Agentic_Physics_Research_Lab/grantlab/grantlab/lean_rl/: agent_random.py  env_lean.py  train.py
Agentic_Physics_Research_Lab/grantlab/grantlab/paper_agent/: graph_writer.py  paper_graph.py
Agentic_Physics_Research_Lab/grantlab/grantlab/physics/: bayes.py  evolve.py  experiments.py  hypothesis.py  models.py
Agentic_Physics_Research_Lab/grantlab/grantlab/reporting/: report_writer.py
Agentic_Physics_Research_Lab/grantlab/grantlab/reporting/templates/: report.latex.j2  report.md.j2
Agentic_Physics_Research_Lab/grantlab/grantlab/runner/: executor.py
Agentic_Physics_Research_Lab/grantlab/grantlab/utils/: data.py  io.py  logging.py
Agentic_Physics_Research_Lab/grantlab/grantlab/wolfram/: client.py  delegate.py
Agentic_Physics_Research_Lab/grantlab/physics/cosmology/: snia_inference.py
Agentic_Physics_Research_Lab/grantlab/physics/quantum/: sv_sim.py
Agentic_Physics_Research_Lab/grantlab/tests/: test_lean_agent.py  test_pipeline.py
(+86 files in other folders)
